--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
-  "name": "sample-express",
-  "version": "1.0.0",
-  "description": "Exercise 1 from The Complete Developer",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "David Vitez",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.19.2"
-  }
+    "name": "sample-express",
+    "version": "1.0.0",
+    "description": "Exercise 1 from The Complete Developer",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "David Vitez",
+    "license": "ISC",
+    "dependencies": {
+        "express": "^4.19.2"
+    },
+    "devDependencies": {
+        "karma": "^6.4.4"
+    }
 }
