--- a/sample-express/package.json
+++ b/sample-express/package.json
@@ -1,13 +1,14 @@
 {
     "name": "sample-express",
     "version": "1.0.0",
-    "description": "Exercise 1 from The Complete Developer",
+    "description": "Exercise 1 & 2 from The Complete Developer",
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "David Vitez",
     "license": "ISC",
+    "type": "module",
     "dependencies": {
         "express": "^4.19.2"
     },
