--- a/sample-express/package.json
+++ b/sample-express/package.json
@@ -10,7 +10,8 @@
     "license": "ISC",
     "type": "module",
     "dependencies": {
-        "express": "^4.19.2"
+        "express": "^4.19.2",
+        "node-fetch": "^3.3.2"
     },
     "devDependencies": {
         "karma": "^6.4.4"
