--- a/sample-express/package.json
+++ b/sample-express/package.json
@@ -14,6 +14,7 @@
         "node-fetch": "^3.3.2"
     },
     "devDependencies": {
+        "@types/express": "^5.0.0",
         "karma": "^6.4.4",
         "typescript": "^5.6.3"
     }
